Bug 159186 - Editing string lists in expert config dialogs does not reload changed value
Summary: Editing string lists in expert config dialogs does not reload changed value
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.8.0 target:24.2.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog-Expert
  Show dependency treegraph
 
Reported: 2024-01-15 01:46 UTC by Gabor Kelemen (Collabora)
Modified: 2024-01-24 15:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Before editing the string list (118.60 KB, image/png)
2024-01-15 01:46 UTC, Gabor Kelemen (Collabora)
Details
After making some changes to a key and reopening the Edit List dialog (103.84 KB, image/png)
2024-01-15 01:46 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-01-15 01:46:19 UTC
Created attachment 191937 [details]
Before editing the string list

When a string list type key is edited in the Expert config dialog, the changes are not reloaded if the Edit List dialog is reopened.

1. Go to Tools - Options - Advanced
2. Press the Open Expert Configuration button
3. Press the Edit button of any key with a type of string-list
4. In the Edit list dialog do some add/edit/remove work, press OK
-> the Expert Configuration dialog shows the list with changed values, good
5. Press Edit again
-> the Edit List dialog shows the original values, press OK and the previous changes are lost

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 84a3401c28135735c7bbe324eb3642b31c7f26f5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started with:

https://git.libreoffice.org/core/+/1597968f5cd2534fb6e0be40fafecc305a004f4e

author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Mon Dec 04 16:00:21 2023 +0100
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Mon Dec 04 17:43:34 2023 +0100

tdf#155676 Properly support editing string lists
Comment 1 Gabor Kelemen (Collabora) 2024-01-15 01:46:46 UTC
Created attachment 191938 [details]
After making some changes to a key and reopening the Edit List dialog
Comment 2 Commit Notification 2024-01-15 11:47:00 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/71296fd27dd9e3e5609b4fd41f3842673231a3ad

tdf#159186 Use changed value when editing string-list a second time

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-01-16 14:42:30 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/395c8cfb770e7424fd99b884f568a32fcc7a728f

tdf#159186 Use changed value when editing string-list a second time

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-01-24 08:50:13 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-0":

https://git.libreoffice.org/core/commit/89807b69090d657bbd52dce74be4bfe024179036

tdf#159186 Use changed value when editing string-list a second time

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.