cui/source/options/optaboutconfig.hxx
@@ -70,8 +70,9 @@ private:
 public:
     explicit CuiAboutConfigTabPage(weld::Window* pParent);
     virtual ~CuiAboutConfigTabPage() override;
-    void InsertEntry(const OUString& rPropertyPath, const OUString& rProp, const OUString& rStatus,
-                     const OUString& rType, const OUString& rValue, const OUString& rTooltip,
+    void InsertEntry(const OUString& rPropertyPath, css::uno::Any aPropertyValue,
+                     const OUString& rProp, const OUString& rStatus, const OUString& rType,
+                     const OUString& rValue, const OUString& rTooltip,
                      const weld::TreeIter* pParentEntry, bool bInsertToPrefBox, bool bIsReadOnly,
                      bool bWasMOdified);
     void Reset();
